[traccar-tonbridge-latest] feat: add Temp1 text

--- a/modern/src/resources/l10n/en.json
+++ b/modern/src/resources/l10n/en.json
@@ -286,6 +286,7 @@
     "positionArmed": "Armed",
     "positionAcceleration": "Acceleration",
     "positionTemp": "Temperature",
+    "positionTemp1": "Temperature",
     "positionDeviceTemp": "Device Temperature",
     "positionCoolantTemp": "Coolant Temperature",
     "positionOperator": "Operator",
