[traccar-tonbridge-latest] feat: Ordnance Survey Grid References in status box

--- a/modern/src/resources/l10n/en.json
+++ b/modern/src/resources/l10n/en.json
@@ -1,4 +1,6 @@
 {
+    "gridReference": "OS Grid Reference",
+    "outOfRange":"Out of Range",
     "signal": "Signal",
     "sharedLoading": "Loading...",
     "sharedHide": "Hide",
