Added LocationIQEarth & Hybrid to en file Added O2/Giff Gaff Coverage Map

--- a/modern/src/resources/l10n/en.json
+++ b/modern/src/resources/l10n/en.json
@@ -359,7 +359,10 @@
     "mapMapTilerHybrid": "MapTiler Hybrid",
     "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
+    "mapLocationIqEarth": "LocationIQ Earth",
+    "mapLocationIqHybrid": "LocationIQ Hybrid",
     "mapLocationIqKey": "LocationIQ Access Token",
+    "mapO2CoverageMap": "O2 / Giff Gaff Coverage Map",
     "mapTomTomBasic": "TomTom Basic",
     "mapTomTomFlow": "TomTom Traffic Flow",
     "mapTomTomIncidents": "TomTom Traffic Incidents",
